# AllPDF

./: .gitignore  README.md  convert_marker.py  convert_mineru.py  convert_ocr.py  pyproject.toml
allpdf/: __init__.py  models.py  orchestrator.py  utils.py
allpdf/cli/: __init__.py  batch.py  check.py  convert.py  main.py
allpdf/engines/: __init__.py  base.py  epub2pdf_engine.py  libreoffice.py  mineru_epub_engine.py  pdf2docx_engine.py  pdf2epub_engine.py  pdf2pptx_engine.py  pdf2xlsx_engine.py  pymupdf_ops.py
allpdf/mcp/: __init__.py  server.py  tools.py
allpdf/quality/: __init__.py  checker.py  compare.py  report.py
tests/: test_integration.py  test_models.py  test_orchestrator.py  test_utils.py
tests/test_engines/: test_base.py  test_epub2pdf_engine.py  test_libreoffice.py  test_pdf2docx_engine.py  test_pdf2epub_engine.py  test_pdf2pptx_engine.py  test_pdf2xlsx_engine.py  test_pymupdf_ops.py
tests/test_quality/: test_checker.py
