[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allpdf"
version = "0.1.0"
description = "Local PDF conversion toolkit — Office <-> PDF with CLI and MCP Server"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24.0",
    "ebooklib>=0.18",
    "pdf2docx>=0.5.8",
    "pikepdf>=9.0.0",
    "click>=8.1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
xlsx = ["tabula-py>=2.9.0", "camelot-py>=0.11.0", "openpyxl>=3.1.0"]
pptx = ["python-pptx>=0.6.23"]
all = ["allpdf[xlsx,pptx]"]

[project.scripts]
allpdf = "allpdf.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
